Removed overflow: hidden; which caused some issues with submenu navigation etc.

--- a/css/toast.css
+++ b/css/toast.css
@@ -22,7 +22,6 @@
 .row {
 	max-width: 1140px;
 	margin: 0 auto;
-	overflow: hidden;
 	min-width: 755px;
 }
 
